kubernetes/kubernetes-ingress/demos_nginx/ingress-scenarios/blue.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blue-ingress
spec:
  backend:
    serviceName: nginxhello-default
    servicePort: 80
  rules:
  - host: kops.nosiris.com
    http:
      paths: 
      - backend: 
          serviceName: nginxhello-blue
          servicePort: 80
