kubernetes/kubernetes-ingress/demos_nginx/ingress-scenarios/blue_red.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blue-red-ingress
spec:
  backend:
    serviceName: nginxhello-default
    servicePort: 80
  rules:
  - host: red.kops.nosiris.com
    http:
      paths:
      - backend:
          serviceName: nginxhello-red
          servicePort: 80
  - host: blue.kops.nosiris.com
    http:
      paths: 
      - backend: 
          serviceName: nginxhello-blue
          servicePort: 80
