kubernetes/kubernetes-ingress/demos_nginx/ingress-scenarios/blue_red_path.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blue-red-path-ingress
spec:
  backend:
    serviceName: nginxhello-default
    servicePort: 80
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginxhello-red
          servicePort: 80
        path: /red
  - http:
      paths:
      - backend:
          serviceName: nginxhello-blue
          servicePort: 80
        path: /blue
